--- a/index.html
+++ b/index.html
@@ -3,278 +3,300 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Real Concept | Interior Design</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@900&display=swap" rel="stylesheet" />
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <title>Interior Design - Inspired Layout</title>
   <style>
-    /* Keep your existing styles */
-    .hero-navbar {
-      background-color: transparent;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      height: 70px; /* Set desired height */
+    /* Reset */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fafafa;
+      color: #333;
+      line-height: 1.6;
+    }
+    a {
+      color: #c17f3e;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Container for uniform width */
+    .container {
+      width: 90%;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 40px 0;
+    }
+
+    /* Hero Section */
+    .hero {
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1400&q=80') center center/cover no-repeat;
+      height: 70vh;
+      color: white;
       display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding-left: 60px;
+      position: relative;
+    }
+    .hero::after {
+      content: "";
+      position: absolute;
+      top:0; left:0; right:0; bottom:0;
+      background-color: rgba(0, 0, 0, 0.4);
+      z-index: 1;
+    }
+    .hero-content {
+      position: relative;
+      z-index: 2;
+      max-width: 600px;
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      margin-bottom: 20px;
+      font-weight: 700;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      margin-bottom: 30px;
+    }
+    .hero button {
+      background-color: #c17f3e;
+      border: none;
+      color: white;
+      padding: 12px 30px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      border-radius: 3px;
+      transition: background-color 0.3s ease;
+    }
+    .hero button:hover {
+      background-color: #a2672b;
+    }
+
+    /* Section Headings */
+    h2.section-title {
+      text-align: center;
+      color: #c17f3e;
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+      font-weight: 700;
+      letter-spacing: 1.2px;
+    }
+
+    /* What We Do */
+    .what-we-do {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: center;
+    }
+    .service-card {
+      background: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      overflow: hidden;
+      flex: 1 1 280px;
+      max-width: 320px;
+      text-align: center;
+      transition: transform 0.3s ease;
+    }
+    .service-card:hover {
+      transform: translateY(-8px);
+    }
+    .service-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .service-card h3 {
+      padding: 15px;
+      font-size: 1.3rem;
+      color: #c17f3e;
+    }
+
+    /* Our Clients */
+    .clients {
+      background: #f3f1ed;
+      padding: 50px 0;
+    }
+    .clients .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 40px;
       align-items: center;
     }
-    .hero-navbar.scrolled {
-      background-color: #ffffff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+    .client-logo {
+      max-width: 140px;
+      filter: grayscale(100%);
+      opacity: 0.7;
+      transition: filter 0.3s ease, opacity 0.3s ease;
+    }
+    .client-logo:hover {
+      filter: none;
+      opacity: 1;
     }
 
-    /* New styles for rolling client logos carousel */
-    #clientsCarousel {
-      overflow: hidden;
-      position: relative;
-      width: 100%;
-      max-width: 900px; /* adjust as needed */
+    /* About Us */
+    .about-us {
+      padding: 60px 0;
+      max-width: 900px;
       margin: 0 auto;
-    }
-    #clientsCarousel .carousel-track {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-      will-change: transform;
-    }
-    .client-logo-wrapper {
-      flex: 0 0 33.3333%; /* show exactly 3 logos in viewport */
       text-align: center;
-      padding: 10px;
     }
-    .client-logo {
-      max-width: 100%;
-      max-height: 80px;
-      object-fit: contain;
-      margin-bottom: 5px;
+    .about-us h2 {
+      margin-bottom: 25px;
+      color: #c17f3e;
     }
-    .client-label {
+    .about-us p {
+      font-size: 1.1rem;
+      color: #555;
+      margin-bottom: 20px;
+    }
+    .about-us .subsection {
+      margin-top: 40px;
+      text-align: left;
+    }
+    .about-us .subsection h4 {
+      color: #a36a1a;
+      margin-bottom: 10px;
+    }
+    .about-us .subsection p {
+      font-size: 1rem;
+      color: #666;
+      line-height: 1.5;
+    }
+
+    /* Contact */
+    .contact {
+      background: #c17f3e;
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+    }
+    .contact h2 {
+      margin-bottom: 25px;
+      font-weight: 700;
+      font-size: 2.2rem;
+    }
+    .contact p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+    .contact a {
+      color: white;
       font-weight: 600;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
+      border: 2px solid white;
+      padding: 12px 30px;
+      border-radius: 30px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+      display: inline-block;
+      text-decoration: none;
+    }
+    .contact a:hover {
+      background-color: white;
+      color: #c17f3e;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .hero {
+        height: 50vh;
+        padding-left: 30px;
+      }
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+      .service-card {
+        max-width: 100%;
+      }
+      .clients .container {
+        gap: 25px;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Single Fixed Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark hero-navbar fixed-top px-4">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="images/logo.jpg" alt="Logo" style="height: 48px; margin-right: 10px;" />
-      The Real Concept
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#heroNavbarNav" aria-controls="heroNavbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="heroNavbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#What We Do">What We Do</a></li>
-        <li class="nav-item"><a class="nav-link" href="#achievements">Achievements</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Transform Your Home</h1>
+      <p>Beautiful interiors tailored to your lifestyle.</p>
+      <button>Explore Our Services</button>
     </div>
-  </nav>
+  </section>
 
-  <!-- Hero Carousel Section -->
-  <div id="heroCarousel" class="carousel slide carousel-fade hero-carousel" data-bs-ride="carousel" data-bs-interval="3000" data-bs-pause="hover">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/hero.jpg" class="d-block w-100" alt="Hero 1" />
-        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4 mt-auto mb-3">We Care For Your Dreams...</h1>
-          <p class="lead mb-5">Stylish Interiors | Affordable Luxury | Customized Solutions</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/hero1.jpg" class="d-block w-100" alt="Hero 2" />
-        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4 mt-auto mb-3">Design that Defines You</h1>
-          <p class="lead mb-5">From Concept to Creation</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/hero2.jpg" class="d-block w-100" alt="Hero 3" />
-        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-          <h1 class="display-4 mt-auto mb-3">Spaces Reimagined</h1>
-          <p class="lead mb-5">Elegant. Functional. Yours.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Carousel controls -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev" aria-label="Previous">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next" aria-label="Next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </button>
-  </div>
-
-  <!-- About Section -->
-  <section id="about" class="container mt-5">
+  <!-- About Us -->
+  <section class="about-us container">
     <h2>About Us</h2>
-    <div class="about-subsection">
-      <h3>Mission</h3>
-      <p>To create inspiring, elegant, and functional spaces tailored perfectly for our clients.</p>
+    <p>We are passionate about designing spaces that blend elegance, comfort, and functionality. Our expert team transforms ideas into reality with attention to every detail.</p>
+
+    <div class="subsection">
+      <h4>Our Mission</h4>
+      <p>To create inspiring interior spaces that elevate the quality of life for our clients.</p>
     </div>
-    <div class="about-subsection">
-      <h3>Vision</h3>
-      <p>To be the leading interior design firm known for innovation, quality, and client satisfaction.</p>
+
+    <div class="subsection">
+      <h4>Our Vision</h4>
+      <p>To be the leading interior design company recognized for innovation and excellence.</p>
     </div>
-    <div class="about-subsection">
-      <h3>Our Values</h3>
-      <p>Integrity, Creativity, Excellence, and Customer-Centric Approach.</p>
+
+    <div class="subsection">
+      <h4>Our Values</h4>
+      <p>Integrity, creativity, and customer satisfaction are at the heart of everything we do.</p>
     </div>
   </section>
 
-  <!-- What We Do Section -->
-  <section id="What We Do" class="container mt-5">
-    <h2>What We Do</h2>
-    <div id="What We Do-container">
-      <div class="project">
-        <h4>Living Room Makeover</h4>
-        <img src="images/What We Do/living-room.jpg" alt="Living Room" />
+  <!-- What We Do -->
+  <section class="container">
+    <h2 class="section-title">What We Do</h2>
+    <div class="what-we-do">
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=400&q=80" alt="Modular Kitchens" />
+        <h3>Modular Kitchens</h3>
       </div>
-      <div class="project">
-        <h4>Modern Kitchen Design</h4>
-        <img src="images/What We Do/kitchen.jpg" alt="Kitchen" />
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=400&q=80" alt="Bedrooms" />
+        <h3>Bedrooms</h3>
       </div>
-    </div>
-  </section>
-
-  <!-- Achievements Section -->
-  <section id="achievements" class="container mt-5">
-    <h2>Achievements</h2>
-    <div class="row">
-      <div class="col-md-4 text-center">
-        <img src="images/achievements/award1.jpg" alt="Award 1" />
-        <p>Best Interior Design Award 2023</p>
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1501183638714-3c8b0f2a54b7?auto=format&fit=crop&w=400&q=80" alt="Living Rooms" />
+        <h3>Living Rooms</h3>
       </div>
-      <div class="col-md-4 text-center">
-        <img src="images/achievements/award2.jpg" alt="Award 2" />
-        <p>Excellence in Innovation 2024</p>
-      </div>
-      <div class="col-md-4 text-center">
-        <img src="images/achievements/award3.jpg" alt="Award 3" />
-        <p>Customer Choice Award 2024</p>
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?auto=format&fit=crop&w=400&q=80" alt="Dining Rooms" />
+        <h3>Dining Rooms</h3>
       </div>
     </div>
   </section>
 
-  <!-- Clients logos with rolling effect -->
-  <section id="clients" class="container mt-5">
-    <h2 class="text-center mb-4">Our Clients</h2>
-    <div id="clientsCarousel">
-      <div class="carousel-track">
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client1.jpg" class="client-logo" alt="KUNDAN SPACES" />
-          <div class="client-label">KUNDAN SPACES</div>
-        </div>
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client2.jpg" class="client-logo" alt="TRIBUTE LANDMARK" />
-          <div class="client-label">TRIBUTE LANDMARK</div>
-        </div>
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client3.jpg" class="client-logo" alt="KHADAKI EDU. SOCIETY" />
-          <div class="client-label">KHADAKI EDU. SOCIETY</div>
-        </div>
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client4.jpg" class="client-logo" alt="YASH PHOTOS" />
-          <div class="client-label">YASH PHOTOS</div>
-        </div>
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client5.jpg" class="client-logo" alt="ROYAL ORANGE COUNTY" />
-          <div class="client-label">ROYAL ORANGE COUNTY</div>
-        </div>
-        <div class="client-logo-wrapper">
-          <img src="images/clients/Client6.png" class="client-logo" alt="JANATA EDU. SOCIETY" />
-          <div class="client-label">JANATA EDU. SOCIETY</div>
-        </div>
-      </div>
+  <!-- Our Clients -->
+  <section class="clients">
+    <div class="container">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Microsoft_logo_2012.svg/2560px-Microsoft_logo_2012.svg.png" alt="Client 1" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Google-flutter-logo.svg" alt="Client 2" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Client 3" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Client 4" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Intel_logo_2020.svg" alt="Client 5" class="client-logo" />
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="container mt-5">
+  <!-- Contact -->
+  <section class="contact">
     <h2>Contact Us</h2>
-    <p class="text-left">
-      Phone: +91 12345 67890<br />
-      Email: <a href="mailto:contact@therealconcept.com">contact@therealconcept.com</a><br />
-      Address: 123 Interior St, Design City, Country
-    </p>
+    <p>Ready to start your project? Reach out to us today!</p>
+    <a href="mailto:info@interiordesign.com">info@interiordesign.com</a>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 The Real Concept. All rights reserved.
-  </footer>
-
-  <!-- Bootstrap JS Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Navbar scroll background script -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const navbar = document.querySelector('.hero-navbar');
-      const hero = document.querySelector('.hero-carousel');
-
-      function onScroll() {
-        if (window.scrollY > hero.offsetHeight) {
-          navbar.classList.add('scrolled');
-        } else {
-          navbar.classList.remove('scrolled');
-        }
-      }
-
-      window.addEventListener('scroll', onScroll);
-      onScroll();
-    });
-  </script>
-
-  <!-- Rolling clients logos script -->
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const track = document.querySelector('#clientsCarousel .carousel-track');
-      const logos = track.children;
-      const totalLogos = logos.length;
-      const visibleCount = 3;
-      let index = 0;
-
-      // Clone first few logos to the end for infinite scroll effect
-      for (let i = 0; i < visibleCount; i++) {
-        track.appendChild(logos[i].cloneNode(true));
-      }
-
-      function moveNext() {
-        index++;
-        if (index > totalLogos) {
-          // Reset instantly without animation
-          track.style.transition = 'none';
-          track.style.transform = 'translateX(0)';
-          index = 1;
-          // Allow the transition again in next frame
-          requestAnimationFrame(() => {
-            requestAnimationFrame(() => {
-              track.style.transition = 'transform 0.5s ease-in-out';
-              track.style.transform = `translateX(-${index * (100 / visibleCount)}%)`;
-            });
-          });
-        } else {
-          track.style.transform = `translateX(-${index * (100 / visibleCount)}%)`;
-        }
-      }
-
-      // Auto scroll every 2 seconds
-      let intervalId = setInterval(moveNext, 2000);
-
-      // Optional: Pause on hover
-      track.parentElement.addEventListener('mouseenter', () => clearInterval(intervalId));
-      track.parentElement.addEventListener('mouseleave', () => {
-        intervalId = setInterval(moveNext, 2000);
-      });
-    });
-  </script>
 </body>
 </html>
+
