--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       letter-spacing: 1.2px;
     }
 
-    /* What We Do */
-    .what-we-do {
+    /* What We Do & Achievements */
+    .what-we-do, .achievements {
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
@@ -279,22 +279,40 @@
     </div>
   </section>
 
+  <!-- Achievements -->
+  <section class="container">
+    <h2 class="section-title">Achievements</h2>
+    <div class="achievements">
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=400&q=80" alt="Award 1" />
+        <h3>Best Interior Design Award 2022</h3>
+      </div>
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=400&q=80" alt="Award 2" />
+        <h3>Innovative Space Design 2023</h3>
+      </div>
+      <div class="service-card">
+        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=400&q=80" alt="Award 3" />
+        <h3>Customer Choice Award 2024</h3>
+      </div>
+    </div>
+  </section>
+
   <!-- Our Clients -->
   <section class="clients">
     <div class="container">
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Microsoft_logo_2012.svg/2560px-Microsoft_logo_2012.svg.png" alt="Client 1" class="client-logo" />
       <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Google-flutter-logo.svg" alt="Client 2" class="client-logo" />
-      <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Client 3" class="client-logo" />
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Client 4" class="client-logo" />
-      <img src="https://upload.wikimedia.org/wikipedia/commons/e/ed/Intel_logo_2020.svg" alt="Client 5" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/Adobe_Corporate_Logo.png" alt="Client 3" class="client-logo" />
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Apple_logo_black.svg" alt="Client 4" class="client-logo" />
     </div>
   </section>
 
   <!-- Contact -->
   <section class="contact">
     <h2>Contact Us</h2>
-    <p>Ready to start your project? Reach out to us today!</p>
-    <a href="mailto:info@interiordesign.com">info@interiordesign.com</a>
+    <p>Ready to transform your space? Get in touch!</p>
+    <a href="mailto:contact@interiordesign.com">Email Us</a>
   </section>
 
 </body>
